--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "event-booking",
   "version": "1.0.0",
-  "description": "",
+  "description": "graphql-api",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "cd client && npm start",
+    "server": "nodemon server.js",
+    "start": "nodemon app.js",
+    "dev": "concurrently --kill-others-on-fail \"npm server\" \"npm client\""
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
     "nodemon": "^1.19.1"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.1"
   }
 }
